--- a/data/cards/63014935.yaml
+++ b/data/cards/63014935.yaml
@@ -6,7 +6,7 @@ name:
   es: Reina Volcánica
   fr: Reine Volcanique
   it: Regina Vulcanica
-  pt:
+  pt: Rainha Vulcânica
   ja: ヴォルカニック・クイーン
   ja_romaji: Vorukanikku Kuīn
   ko: 볼캐닉 퀸
