--- a/data/rush/16304.yaml
+++ b/data/rush/16304.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP021
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/EV01-KR002
     set_name: Event Pack 2021 Vol.1
