--- a/data/rush/16767.yaml
+++ b/data/rush/16767.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: Strongest Battle Deck Tournament prize card
     rarities:
     - Secret Rare
+  - set_number: RD/SD0A-JP026
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/SBD0-KR004
     set_name: Strongest Battle Deck +1 Bonus Card
