--- a/data/rush/17224.yaml
+++ b/data/rush/17224.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Common
+  - set_number: RD/SD0A-JP022
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR040
     set_name: Grand Rush Pack
