--- a/data/rush/15174.yaml
+++ b/data/rush/15174.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP031
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/ST02-KR011
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
