--- a/data/rush/15175.yaml
+++ b/data/rush/15175.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP030
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/ST02-KR012
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
