--- a/data/rush/15184.yaml
+++ b/data/rush/15184.yaml
@@ -36,6 +36,8 @@ attribute: LIGHT
 level: 8
 atk: 3000
 def: 2500
+series:
+- Blue-Eyes
 legend: true
 images:
 - index: 1
@@ -69,6 +71,10 @@ sets:
     set_name: '"Blue-Eyes White Dragon Secret Rare Special Blue Version" GET Campaign'
     rarities:
     - Secret Rare
+  - set_number: RD/SD0A-JP002
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/KP01-KR000
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
