--- a/data/rush/15795.yaml
+++ b/data/rush/15795.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP020
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP03-KR020
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
