--- a/data/rush/15913.yaml
+++ b/data/rush/15913.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/SD0A-JP034
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/MAX1-KR019
     set_name: Maximum Ultra Enhancement Pack
