--- a/data/rush/16341.yaml
+++ b/data/rush/16341.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Common
+  - set_number: RD/SD0A-JP019
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP05-KR035
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
