--- a/data/rush/17210.yaml
+++ b/data/rush/17210.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Super Rare
+  - set_number: RD/SD0A-JP029
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR028
     set_name: Grand Rush Pack
