--- a/rush.yaml
+++ b/rush.yaml
@@ -1829,6 +1829,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP031
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/ST02-KR011
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
@@ -1904,6 +1908,10 @@ sets:
     - Common
   - set_number: RD/SD03-JP025
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
+    rarities:
+    - Common
+  - set_number: RD/SD0A-JP030
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Common
   ko:
@@ -2237,6 +2245,8 @@ attribute: LIGHT
 level: 8
 atk: 3000
 def: 2500
+series:
+- Blue-Eyes
 legend: true
 images:
 - index: 1
@@ -2270,6 +2280,10 @@ sets:
     set_name: '"Blue-Eyes White Dragon Secret Rare Special Blue Version" GET Campaign'
     rarities:
     - Secret Rare
+  - set_number: RD/SD0A-JP002
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/KP01-KR000
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
@@ -15700,6 +15714,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP020
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP03-KR020
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
@@ -19542,6 +19560,10 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/SD0A-JP034
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/MAX1-KR019
     set_name: Maximum Ultra Enhancement Pack
@@ -28016,6 +28038,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP021
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/EV01-KR002
     set_name: Event Pack 2021 Vol.1
@@ -30483,6 +30509,10 @@ sets:
     - Super Rare
   - set_number: RD/GRD0-JP007
     set_name: Go Rush Deck Bonus Cards
+    rarities:
+    - Common
+  - set_number: RD/SD0A-JP019
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Common
   ko:
@@ -41107,6 +41137,10 @@ sets:
     set_name: Strongest Battle Deck Tournament prize card
     rarities:
     - Secret Rare
+  - set_number: RD/SD0A-JP026
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/SBD0-KR004
     set_name: Strongest Battle Deck +1 Bonus Card
@@ -53601,6 +53635,10 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Super Rare
+  - set_number: RD/SD0A-JP029
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR028
     set_name: Grand Rush Pack
@@ -54488,6 +54526,10 @@ sets:
   ja:
   - set_number: RD/GRP1-JP040
     set_name: Gold Rush Pack
+    rarities:
+    - Common
+  - set_number: RD/SD0A-JP022
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Common
   ko:
@@ -114161,6 +114203,323 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
 yugipedia_page_id: 1002005
+---
+konami_id:
+name:
+  en: Blue-Eyes Ultimate Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    "Blue-Eyes White Dragon" + "Blue-Eyes White Dragon" + "Blue-Eyes White Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    「青眼の白龍」＋「青眼の白龍」＋「青眼の白龍」
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Fusion
+attribute: LIGHT
+level: 12
+atk: 4500
+def: 3800
+series:
+- Blue-Eyes
+images:
+- index: 1
+  image: BlueEyesUltimateDragon-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JP001
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Ultra Rare
+    - Over Rush Rare
+yugipedia_page_id: 1004305
+---
+konami_id:
+name:
+  en: Blue-Eyes Bright Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>青眼の煌龍<rt>ブルーアイズ・ブライト・ドラゴン</rt></ruby>
+  ja_romaji: Burūaizu Buraito Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Blue-Eyes White Dragon" while in the hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, this card's name becomes "Blue-Eyes White Dragon" and it gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 8
+atk: 2500
+def: 2500
+series:
+- Blue-Eyes
+images:
+- index: 1
+  image: BlueEyesBrightDragon-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JPS02
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004313
+---
+konami_id:
+name:
+  en: Blue-Eyes Vision Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ブルーアイズ・ビジョン・ドラゴン
+  ja_romaji: Burūaizu Bijon Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If you have a face-up Level 8 or higher Dragon Type monster on your field, you can Special Summon this card from your hand to your field in face-up Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, this card's name becomes "Blue-Eyes White Dragon", and if you Fusion Summon "Blue-Eyes Ultimate Dragon", this face-up card can be treated as 2 materials.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 8
+atk: 2500
+def: 2000
+series:
+- Blue-Eyes
+images:
+- index: 1
+  image: BlueEyesVisionDragon-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JPS03
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Super Rare
+  - set_number: RD/SD0A-JP004
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004314
+---
+konami_id:
+name:
+  en: Treasure of Eyes of Blue
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>秘<rt>ひ</rt></ruby><ruby>宝<rt>ほう</rt></ruby>
+  ja_romaji: Aokime no Hihō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a monster on your field is destroyed by an opponent's attack or their card effect.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 8 or higher LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field. Then, if you have "Blue-Eyes White Dragon" face-up on your field, you can destroy 1 card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: TreasureofEyesofBlue-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JPS07
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004315
+---
+konami_id:
+name:
+  en: Light Effigy
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This face-up card can be treated as 2 Tributes for the Tribute Summon of a LIGHT Attribute Normal Monster in Attack Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 4
+atk: 1500
+def: 0
+images:
+- index: 1
+  image: LightEffigy-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JP014
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1004316
 ---
 konami_id:
 name:
