--- a/data/cards/08240199.yaml
+++ b/data/cards/08240199.yaml
@@ -8,7 +8,7 @@ name:
   it: Saggio con gli Occhi di Blu
   pt: Sábio com Azul nos Olhos
   ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>賢<rt>けん</rt></ruby><ruby>士<rt>し</rt></ruby>
-  ja_romaji: Aokime no Kenshi
+  ja_romaji: Aoki Me no Kenshi
   ko: 파란 눈의 현사
   ko_rr: Paran Nun-ui Hyeonsa
   zh-TW:
