--- a/data/cards/88241506.yaml
+++ b/data/cards/88241506.yaml
@@ -8,7 +8,7 @@ name:
   it: Fanciulla con gli Occhi di Blu
   pt: Donzela com Azul nos Olhos
   ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>乙女<rt>おとめ</rt></ruby>
-  ja_romaji: Aokime no Otome
+  ja_romaji: Aoki Me no Otome
   ko: 파란 눈의 소녀
   ko_rr: Paran Nun-ui Sonyeo
   zh-TW: 青之眼少女
