--- a/data/rush/yugipedia1004305.yaml
+++ b/data/rush/yugipedia1004305.yaml
@@ -42,5 +42,8 @@ sets:
     set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Ultra Rare
+  - set_number: RD/SD0A-JPS01
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
     - Over Rush Rare
 yugipedia_page_id: 1004305
