--- a/data/rush/yugipedia1004313.yaml
+++ b/data/rush/yugipedia1004313.yaml
@@ -61,10 +61,13 @@ images:
   image: BlueEyesBrightDragon-RDSD0A-JP-OP.png
 sets:
   ja:
-  - set_number: RD/SD0A-JPS02
+  - set_number: RD/SD0A-JP003
     set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Common
+  - set_number: RD/SD0A-JPS02
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
     - Super Rare
 is_translation_unofficial:
   name:
