--- a/data/cards/35659410.yaml
+++ b/data/cards/35659410.yaml
@@ -8,7 +8,7 @@ name:
   it: Visione con gli Occhi di Blu
   pt: Visão com Azul nos Olhos
   ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>幻<rt>げん</rt></ruby><ruby>出<rt>しゅつ</rt></ruby>
-  ja_romaji: Aokime no Genshutsu
+  ja_romaji: Aoki Me no Genshutsu
   ko: 파란 눈의 환출
   ko_rr: Paran Nun-ui Hwanchul
   zh-TW:
