--- a/data/cards/36734924.yaml
+++ b/data/cards/36734924.yaml
@@ -8,7 +8,7 @@ name:
   it: Sacerdotessa con gli Occhi di Blu
   pt: Sacerdotisa com Azul nos Olhos
   ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>巫<rt>み</rt></ruby><ruby>女<rt>こ</rt></ruby>
-  ja_romaji: Aokime no Miko
+  ja_romaji: Aoki Me no Miko
   ko: 파란 눈의 무녀
   ko_rr:
   zh-TW:
