--- a/data/cards/45644898.yaml
+++ b/data/cards/45644898.yaml
@@ -8,7 +8,7 @@ name:
   it: Maestro con gli Occhi di Blu
   pt: Mestre com Azul nos Olhos
   ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>祭<rt>さい</rt></ruby><ruby>司<rt>し</rt></ruby>
-  ja_romaji: Aokime no Saishi
+  ja_romaji: Aoki Me no Saishi
   ko: 파란 눈의 제사
   ko_rr:
   zh-TW:
