--- a/data/cards/72855441.yaml
+++ b/data/cards/72855441.yaml
@@ -8,7 +8,7 @@ name:
   it: Protettore con gli Occhi di Blu
   pt: Protetor com Azul nos Olhos
   ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>護人<rt>もりと</rt></ruby>
-  ja_romaji: Aokime no Morito
+  ja_romaji: Aoki Me no Morito
   ko: 파란 눈의 호인
   ko_rr:
   zh-TW:
