--- a/data/rush/yugipedia1004315.yaml
+++ b/data/rush/yugipedia1004315.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>秘<rt>ひ</rt></ruby><ruby>宝<rt>ほう</rt></ruby>
-  ja_romaji: Aokime no Hihō
+  ja_romaji: Aoki Me no Hihō
   ko:
   ko_rr:
   zh-TW:
@@ -43,10 +43,13 @@ images:
   image: TreasureofEyesofBlue-RDSD0A-JP-OP.png
 sets:
   ja:
-  - set_number: RD/SD0A-JPS07
+  - set_number: RD/SD0A-JP035
     set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Common
+  - set_number: RD/SD0A-JPS07
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
     - Super Rare
 is_translation_unofficial:
   name:
