--- a/rush.yaml
+++ b/rush.yaml
@@ -114248,6 +114248,9 @@ sets:
     set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Ultra Rare
+  - set_number: RD/SD0A-JPS01
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
     - Over Rush Rare
 yugipedia_page_id: 1004305
 ---
@@ -114314,10 +114317,13 @@ images:
   image: BlueEyesBrightDragon-RDSD0A-JP-OP.png
 sets:
   ja:
-  - set_number: RD/SD0A-JPS02
+  - set_number: RD/SD0A-JP003
     set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Common
+  - set_number: RD/SD0A-JPS02
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
     - Super Rare
 is_translation_unofficial:
   name:
@@ -114413,7 +114419,7 @@ name:
   it:
   pt:
   ja: <ruby>青<rt>あお</rt></ruby>き<ruby>眼<rt>め</rt></ruby>の<ruby>秘<rt>ひ</rt></ruby><ruby>宝<rt>ほう</rt></ruby>
-  ja_romaji: Aokime no Hihō
+  ja_romaji: Aoki Me no Hihō
   ko:
   ko_rr:
   zh-TW:
@@ -114449,10 +114455,13 @@ images:
   image: TreasureofEyesofBlue-RDSD0A-JP-OP.png
 sets:
   ja:
-  - set_number: RD/SD0A-JPS07
+  - set_number: RD/SD0A-JP035
     set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
     rarities:
     - Common
+  - set_number: RD/SD0A-JPS07
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
     - Super Rare
 is_translation_unofficial:
   name:
