--- a/data/cards/38844957.yaml
+++ b/data/cards/38844957.yaml
@@ -8,7 +8,7 @@ name:
   it: Arte Rituale Urgente
   pt: Arte Ritual Urgente
   ja: <ruby>緊<rt>きん</rt></ruby><ruby>急<rt>きゅう</rt></ruby><ruby>儀<rt>ぎ</rt></ruby><ruby>式<rt>しき</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>
-  ja_romaji: Kinkyū Gishiki Jutsu
+  ja_romaji: Kinkyū Gishikijutsu
   ko: 긴급의식술
   ko_rr:
   zh-TW:
