--- a/data/cards/46052429.yaml
+++ b/data/cards/46052429.yaml
@@ -8,7 +8,7 @@ name:
   it: Arte Avanzata del Rituale
   pt: Arte Ritual Avançada
   ja: <ruby>高<rt>こう</rt></ruby><ruby>等<rt>とう</rt></ruby><ruby>儀<rt>ぎ</rt></ruby><ruby>式<rt>しき</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>
-  ja_romaji: Kōtō Gishiki Jutsu
+  ja_romaji: Kōtō Gishikijutsu
   ko: 고등의식술
   ko_rr:
   zh-TW:
