--- a/data/cards/73752131.yaml
+++ b/data/cards/73752131.yaml
@@ -83,6 +83,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: SBC1-ENA02
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: MFC-065
     set_name: Magician's Force
     rarities:
@@ -124,6 +128,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: SBC1-DEA02
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR120
     set_name: Dark Revelation Volume 1
@@ -159,6 +167,10 @@ sets:
     - Common
   - set_number: LEDD-FRA06
     set_name: Legendary Dragon Decks
+    rarities:
+    - Common
+  - set_number: SBC1-FRA02
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   it:
@@ -198,6 +210,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: SBC1-ITA02
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT120
     set_name: Dark Revelation Volume 1
@@ -221,6 +237,10 @@ sets:
     - Common
   - set_number: LEDD-PTA06
     set_name: Legendary Dragon Decks
+    rarities:
+    - Common
+  - set_number: SBC1-PTA02
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -280,4 +300,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 961
