--- a/data/cards/98502113.yaml
+++ b/data/cards/98502113.yaml
@@ -101,6 +101,10 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: SBC1-ENA20
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: MFC-105
     set_name: Magician's Force
     rarities:
@@ -151,6 +155,10 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: SBC1-DEA20
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR160
     set_name: Dark Revelation Volume 1
@@ -189,6 +197,10 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: SBC1-FRA20
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: DR1-IT160
     set_name: Dark Revelation Volume 1
@@ -227,6 +239,10 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: SBC1-ITA20
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT160
     set_name: Dark Revelation Volume 1
@@ -252,6 +268,10 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: SBC1-PTA20
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: 303-051
     set_name: Champion of Black Magic
