--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -232,7 +232,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
-  - set_number: SBC1-EN???
+  - set_number: SBC1-ENA01
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
@@ -488,7 +488,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
-  - set_number: SBC1-DE???
+  - set_number: SBC1-DEA01
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
@@ -648,7 +648,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
-  - set_number: SBC1-FR???
+  - set_number: SBC1-FRA01
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
@@ -812,7 +812,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
-  - set_number: SBC1-IT???
+  - set_number: SBC1-ITA01
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
@@ -939,7 +939,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
-  - set_number: SBC1-PT???
+  - set_number: SBC1-PTA01
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
