--- a/rush.yaml
+++ b/rush.yaml
@@ -114276,7 +114276,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札にいるこのカードのカード名は「青眼の白龍」になる。
   ko:
   zh-TW:
   zh-CN:
@@ -114288,7 +114289,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114300,7 +114302,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、このカードのカード名は「青眼の白龍」になり、攻撃力は５００アップする。自分フィールドに表側表示のレジェンド通常モンスターがいる場合、さらに相手フィールドの表側表示モンスター（レベル８以下）１体を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114354,7 +114357,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（レベル８以上／ドラゴン族）がいる場合、このカードは手札から自分フィールドに表側守備表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114366,7 +114370,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114378,7 +114383,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、このカードのカード名は「青眼の白龍」になり、自分が「青眼の究極竜」をフュージョン召喚する場合、表側表示のこのカードは２体分の素材にできる。
   ko:
   zh-TW:
   zh-CN:
@@ -114432,7 +114438,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドのモンスターが相手の攻撃または相手の効果で破壊された時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114444,7 +114451,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル８以上／光属性／ドラゴン族）１体を選び、自分フィールドに表側表示で特殊召喚する。その後、自分フィールドに表側表示の「青眼の白龍」がいる場合、相手フィールドのカード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -114492,7 +114500,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -114506,7 +114515,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    通常モンスター（光属性）を攻撃表示でアドバンス召喚する場合、表側表示のこのカードは２体分のリリースにできる。
   ko:
   zh-TW:
   zh-CN:
