--- a/data/cards/00295517.yaml
+++ b/data/cards/00295517.yaml
@@ -89,6 +89,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ENI27
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: LOD-078
     set_name: Legacy of Darkness
     rarities:
@@ -126,6 +130,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-DEI27
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: SD4-FR020
     set_name: 'Structure Deck: Fury from the Deep'
@@ -159,6 +167,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-FRI27
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: SD4-IT020
     set_name: 'Structure Deck: Fury from the Deep'
@@ -192,6 +204,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ITI27
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: SD4-PT020
     set_name: 'Structure Deck: Fury from the Deep'
@@ -213,6 +229,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-PTI27
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: MA-30
     set_name: Mythological Age
