--- a/data/cards/14342283.yaml
+++ b/data/cards/14342283.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
+  - set_number: SBC1-ENH18
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: STOR-DE076
     set_name: Storm of Ragnarok
@@ -73,6 +77,10 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
+  - set_number: SBC1-DEH18
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: STOR-FR076
     set_name: Storm of Ragnarok
@@ -90,6 +98,10 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
+  - set_number: SBC1-FRH18
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: STOR-IT076
     set_name: Storm of Ragnarok
@@ -107,6 +119,10 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
+  - set_number: SBC1-ITH18
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: AP02-PT025
     set_name: Astral Pack Two
@@ -120,6 +136,10 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
+  - set_number: SBC1-PTH18
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: STOR-JP076
     set_name: Storm of Ragnarok
@@ -137,4 +157,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 158171
