--- a/data/cards/17601919.yaml
+++ b/data/cards/17601919.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SBC1-ENI09
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: SHSP-DE032
     set_name: Shadow Specters
@@ -59,6 +63,10 @@ sets:
     - Common
   - set_number: MP14-DE154
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SBC1-DEI09
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   fr:
@@ -70,6 +78,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SBC1-FRI09
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: SHSP-IT032
     set_name: Shadow Specters
@@ -79,6 +91,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SBC1-ITI09
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: SHSP-PT032
     set_name: Shadow Specters
@@ -86,6 +102,10 @@ sets:
     - Common
   - set_number: MP14-PT154
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SBC1-PTI09
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -101,4 +121,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 270823
