--- a/data/cards/24094653.yaml
+++ b/data/cards/24094653.yaml
@@ -172,6 +172,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: SBC1-ENH15
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: KC01-EN038
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
@@ -335,6 +339,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: SBC1-DEH15
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: LDD-F047
     set_name: Legend of Blue Eyes White Dragon
@@ -463,6 +471,10 @@ sets:
     rarities:
     - Super Rare
   - set_number: SBC1-FRB13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  - set_number: SBC1-FRH15
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
@@ -597,6 +609,10 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: SBC1-ITH15
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: LDB-P059
     set_name: Legend of Blue Eyes White Dragon
@@ -705,6 +721,10 @@ sets:
     rarities:
     - Super Rare
   - set_number: SBC1-PTB13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  - set_number: SBC1-PTH15
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
