--- a/data/cards/26905245.yaml
+++ b/data/cards/26905245.yaml
@@ -86,6 +86,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ENI32
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: PTDN-DE094
     set_name: Phantom Darkness
@@ -130,6 +134,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-DEI32
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: PTDN-FR094
     set_name: Phantom Darkness
@@ -174,6 +182,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-FRI32
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: PTDN-IT094
     set_name: Phantom Darkness
@@ -218,6 +230,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ITI32
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: BP02-PT193
     set_name: 'Battle Pack 2: War of the Giants'
@@ -248,6 +264,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: SBC1-PTI32
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: VB5-002
     set_name: The Valuable Book 5 promotional cards
