--- a/data/cards/27967615.yaml
+++ b/data/cards/27967615.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SBC1-ENI29
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: SOD-DE047
     set_name: Soul of the Duelist
@@ -65,6 +69,10 @@ sets:
     - Common
   - set_number: SGX1-DEI16
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SBC1-DEI29
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   fr:
@@ -80,6 +88,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SBC1-FRI29
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: SOD-IT047
     set_name: Soul of the Duelist
@@ -93,6 +105,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SBC1-ITI29
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: SOD-PT047
     set_name: Soul of the Duelist
@@ -100,6 +116,10 @@ sets:
     - Short Print
   - set_number: SGX1-PTI16
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SBC1-PTI29
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
