--- a/data/cards/32062913.yaml
+++ b/data/cards/32062913.yaml
@@ -46,6 +46,10 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
+  - set_number: SBC1-ENI18
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: MFC-094
     set_name: Magician's Force
     rarities:
@@ -55,9 +59,17 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
+  - set_number: SBC1-DEI18
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR149
     set_name: Dark Revelation Volume 1
+    rarities:
+    - Common
+  - set_number: SBC1-FRI18
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   it:
@@ -65,9 +77,17 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
+  - set_number: SBC1-ITI18
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT149
     set_name: Dark Revelation Volume 1
+    rarities:
+    - Common
+  - set_number: SBC1-PTI18
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -99,4 +119,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 13156
