--- a/data/cards/35346968.yaml
+++ b/data/cards/35346968.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: SBC1-ENH17
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: PSV-055
     set_name: Pharaoh's Servant
     rarities:
@@ -73,6 +77,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: SBC1-DEH17
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: SDP-F055
     set_name: Pharaoh's Servant
@@ -80,6 +88,10 @@ sets:
     - Short Print
   - set_number: PSV-FR055
     set_name: Pharaoh's Servant (25th Anniversary Edition)
+    rarities:
+    - Common
+  - set_number: SBC1-FRH17
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   it:
@@ -91,9 +103,17 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: SBC1-ITH17
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: PSV-PT055
     set_name: Pharaoh's Servant (25th Anniversary Edition)
+    rarities:
+    - Common
+  - set_number: SBC1-PTH17
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -133,4 +153,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 87
