--- a/data/cards/45702357.yaml
+++ b/data/cards/45702357.yaml
@@ -56,9 +56,17 @@ sets:
     set_name: Rising Rampage
     rarities:
     - Common
+  - set_number: SBC1-ENI11
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: RIRA-DE035
     set_name: Rising Rampage
+    rarities:
+    - Common
+  - set_number: SBC1-DEI11
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   fr:
@@ -66,14 +74,26 @@ sets:
     set_name: Rising Rampage
     rarities:
     - Common
+  - set_number: SBC1-FRI11
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: RIRA-IT035
     set_name: Rising Rampage
     rarities:
     - Common
+  - set_number: SBC1-ITI11
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: RIRA-PT035
     set_name: Rising Rampage
+    rarities:
+    - Common
+  - set_number: SBC1-PTI11
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -89,4 +109,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 605337
