--- a/data/cards/58257569.yaml
+++ b/data/cards/58257569.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: SBC1-ENI10
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: LEDU-DE001
     set_name: Legendary Duelists
@@ -64,6 +68,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: SBC1-DEI10
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: LEDU-FR001
     set_name: Legendary Duelists
@@ -73,6 +81,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: SBC1-FRI10
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: LEDU-IT001
     set_name: Legendary Duelists
@@ -82,6 +94,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: SBC1-ITI10
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: LEDU-PT001
     set_name: Legendary Duelists
@@ -91,6 +107,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: SBC1-PTI10
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: DP18-JP001
     set_name: 'Duelist Pack: Legend Duelist'
@@ -109,4 +129,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 494064
