--- a/data/cards/74003290.yaml
+++ b/data/cards/74003290.yaml
@@ -65,6 +65,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SBC1-ENI31
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: STP6-EN0??
     set_name: Speed Duel Tournament Pack 6
     rarities:
@@ -95,6 +99,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SBC1-DEI31
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: STP6-DE0??
     set_name: Speed Duel Tournament Pack 6
     rarities:
@@ -125,6 +133,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SBC1-FRI31
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: STP6-FR0??
     set_name: Speed Duel Tournament Pack 6
     rarities:
@@ -155,6 +167,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SBC1-ITI31
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: STP6-IT0??
     set_name: Speed Duel Tournament Pack 6
     rarities:
@@ -178,6 +194,10 @@ sets:
     - Ultra Rare
   - set_number: SDSH-PT037
     set_name: 'Structure Deck: Shaddoll Showdown'
+    rarities:
+    - Common
+  - set_number: SBC1-PTI31
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   - set_number: STP6-PT0??
