--- a/data/cards/74976215.yaml
+++ b/data/cards/74976215.yaml
@@ -53,6 +53,10 @@ sets:
     rarities:
     - Rare
     - Shatterfoil Rare
+  - set_number: SBC1-ENI04
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: CRMS-DE035
     set_name: Crimson Crisis
@@ -63,6 +67,10 @@ sets:
     rarities:
     - Rare
     - Shatterfoil Rare
+  - set_number: SBC1-DEI04
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: CRMS-FR035
     set_name: Crimson Crisis
@@ -73,6 +81,10 @@ sets:
     rarities:
     - Rare
     - Shatterfoil Rare
+  - set_number: SBC1-FRI04
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: CRMS-IT035
     set_name: Crimson Crisis
@@ -83,12 +95,20 @@ sets:
     rarities:
     - Rare
     - Shatterfoil Rare
+  - set_number: SBC1-ITI04
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: BP03-PT053
     set_name: 'Battle Pack 3: Monster League'
     rarities:
     - Rare
     - Shatterfoil Rare
+  - set_number: SBC1-PTI04
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: CRMS-JP035
     set_name: Crimson Crisis
@@ -102,4 +122,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 57442
