--- a/data/cards/81756897.yaml
+++ b/data/cards/81756897.yaml
@@ -46,24 +46,45 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SBC1-ENI19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: PP01-DE010
     set_name: Premium Pack (TCG)
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SBC1-DEI19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: PP01-FR010
     set_name: Premium Pack (TCG)
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SBC1-FRI19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: PP01-IT010
     set_name: Premium Pack (TCG)
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SBC1-ITI19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  pt:
+  - set_number: SBC1-PTI19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: ''
     set_name: Premium Pack 2 (Japanese)
@@ -82,4 +103,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 10061
