--- a/data/cards/81919143.yaml
+++ b/data/cards/81919143.yaml
@@ -53,6 +53,10 @@ sets:
     rarities:
     - Rare
     - Mosaic Rare
+  - set_number: SBC1-ENI02
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: GX03-DE001
     set_name: Yu-Gi-Oh! GX Spirit Caller promotional cards
@@ -63,6 +67,10 @@ sets:
     rarities:
     - Rare
     - Mosaic Rare
+  - set_number: SBC1-DEI02
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: GX03-FR001
     set_name: Yu-Gi-Oh! GX Spirit Caller promotional cards
@@ -73,6 +81,10 @@ sets:
     rarities:
     - Rare
     - Mosaic Rare
+  - set_number: SBC1-FRI02
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: GX03-IT001
     set_name: Yu-Gi-Oh! GX Spirit Caller promotional cards
@@ -83,12 +95,20 @@ sets:
     rarities:
     - Rare
     - Mosaic Rare
+  - set_number: SBC1-ITI02
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: BP02-PT047
     set_name: 'Battle Pack 2: War of the Giants'
     rarities:
     - Rare
     - Mosaic Rare
+  - set_number: SBC1-PTI02
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: GX03-JP001
     set_name: Yu-Gi-Oh! GX Spirit Caller promotional cards
@@ -103,4 +123,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 18912
