--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -247,7 +247,7 @@ sets:
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
     - Secret Rare
-  - set_number: KC01-EN???
+  - set_number: KC01-EN000
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
     - Quarter Century Secret Rare
