--- a/data/cards/90330453.yaml
+++ b/data/cards/90330453.yaml
@@ -46,21 +46,42 @@ sets:
     set_name: Duelist League Series 9 participation card
     rarities:
     - Super Rare
+  - set_number: SBC1-ENI17
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: DL9-DE001
     set_name: Duelist League Series 9 participation card
     rarities:
     - Super Rare
+  - set_number: SBC1-DEI17
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DL9-FR001
     set_name: Duelist League Series 9 participation card
     rarities:
     - Super Rare
+  - set_number: SBC1-FRI17
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: DL9-IT001
     set_name: Duelist League Series 9 participation card
     rarities:
     - Super Rare
+  - set_number: SBC1-ITI17
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  pt:
+  - set_number: SBC1-PTI17
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: ''
     set_name: Booster 6
@@ -81,4 +102,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 7933
