--- a/data/cards/94163677.yaml
+++ b/data/cards/94163677.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: King's Court
     rarities:
     - Rare
+  - set_number: SBC1-ENH13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: LON-027
     set_name: Labyrinth of Nightmare
     rarities:
@@ -81,6 +85,10 @@ sets:
     set_name: King's Court
     rarities:
     - Rare
+  - set_number: SBC1-DEH13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: LDC-F027
     set_name: Labyrinth of Nightmare
@@ -94,6 +102,10 @@ sets:
     set_name: King's Court
     rarities:
     - Rare
+  - set_number: SBC1-FRH13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: LDI-I027
     set_name: Labyrinth of Nightmare
@@ -107,11 +119,19 @@ sets:
     set_name: King's Court
     rarities:
     - Rare
+  - set_number: SBC1-ITH13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: KICO-PT050
     set_name: King's Court
     rarities:
     - Rare
+  - set_number: SBC1-PTH13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: SM-26
     set_name: Spell of Mask
@@ -145,4 +165,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 167
