--- a/data/cards/96008713.yaml
+++ b/data/cards/96008713.yaml
@@ -70,6 +70,10 @@ sets:
     rarities:
     - Common
     - Shatterfoil Rare
+  - set_number: SBC1-ENI22
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: DT02-EN050
     set_name: Duel Terminal 2
     rarities:
@@ -105,6 +109,10 @@ sets:
     rarities:
     - Common
     - Shatterfoil Rare
+  - set_number: SBC1-DEI22
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: TP8-FR001
     set_name: Tournament Pack 8
@@ -136,6 +144,10 @@ sets:
     rarities:
     - Common
     - Shatterfoil Rare
+  - set_number: SBC1-FRI22
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: TP8-IT001
     set_name: Tournament Pack 8
@@ -167,6 +179,10 @@ sets:
     rarities:
     - Common
     - Shatterfoil Rare
+  - set_number: SBC1-ITI22
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: BP02-PT186
     set_name: 'Battle Pack 2: War of the Giants'
@@ -182,6 +198,10 @@ sets:
     rarities:
     - Common
     - Shatterfoil Rare
+  - set_number: SBC1-PTI22
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: G4-15
     set_name: 'Yu-Gi-Oh! Duel Monsters 4: Battle of Great Duelist: Jonouchi Deck promotional cards'
@@ -230,4 +250,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 8910
