--- a/data/cards/05600127.yaml
+++ b/data/cards/05600127.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: Dark Beginning 1
     rarities:
     - Common
+  - set_number: SBC1-ENH19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: LON-005
     set_name: Labyrinth of Nightmare
     rarities:
@@ -69,16 +73,33 @@ sets:
     set_name: Dark Beginning 1
     rarities:
     - Common
+  - set_number: SBC1-DEH19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: LDC-F005
     set_name: Labyrinth of Nightmare
     rarities:
     - Short Print
+  - set_number: SBC1-FRH19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: LDI-I005
     set_name: Labyrinth of Nightmare
     rarities:
     - Short Print
+  - set_number: SBC1-ITH19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  pt:
+  - set_number: SBC1-PTH19
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: SM-04
     set_name: Spell of Mask
@@ -104,4 +125,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 3554
