--- a/data/cards/08034697.yaml
+++ b/data/cards/08034697.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: Spellcaster's Command Structure Deck
     rarities:
     - Common
+  - set_number: SBC1-ENI08
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: MFC-069
     set_name: Magician's Force
     rarities:
@@ -65,6 +69,10 @@ sets:
     set_name: Spellcaster's Command Structure Deck
     rarities:
     - Common
+  - set_number: SBC1-DEI08
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR124
     set_name: Dark Revelation Volume 1
@@ -72,6 +80,10 @@ sets:
     - Common
   - set_number: SDSC-FR010
     set_name: Spellcaster's Command Structure Deck
+    rarities:
+    - Common
+  - set_number: SBC1-FRI08
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   it:
@@ -83,9 +95,17 @@ sets:
     set_name: Spellcaster's Command Structure Deck
     rarities:
     - Common
+  - set_number: SBC1-ITI08
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT124
     set_name: Dark Revelation Volume 1
+    rarities:
+    - Common
+  - set_number: SBC1-PTI08
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -117,4 +137,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 12683
