--- a/data/cards/14087893.yaml
+++ b/data/cards/14087893.yaml
@@ -166,6 +166,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: SBC1-ENI28
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: PGD-035
     set_name: Pharaonic Guardian
     rarities:
@@ -306,6 +310,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: SBC1-DEI28
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DB2-FR232
     set_name: Dark Beginning 2
@@ -428,6 +436,10 @@ sets:
     - Common
   - set_number: SGX3-FRI31
     set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+  - set_number: SBC1-FRI28
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   it:
@@ -554,6 +566,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: SBC1-ITI28
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: BP02-PT138
     set_name: 'Battle Pack 2: War of the Giants'
@@ -623,6 +639,10 @@ sets:
     - Common
   - set_number: SGX3-PTI31
     set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+  - set_number: SBC1-PTI28
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
