--- a/data/cards/21770260.yaml
+++ b/data/cards/21770260.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SBC1-ENH11
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: LON-026
     set_name: Labyrinth of Nightmare
     rarities:
@@ -75,6 +79,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SBC1-DEH11
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: LDC-F026
     set_name: Labyrinth of Nightmare
@@ -82,6 +90,10 @@ sets:
     - Rare
   - set_number: LCJW-FR124
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: SBC1-FRH11
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   it:
@@ -93,9 +105,17 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: SBC1-ITH11
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT124
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: SBC1-PTH11
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -131,4 +151,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 5391
