--- a/data/cards/26412047.yaml
+++ b/data/cards/26412047.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: SBC1-ENI30
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: DT02-EN093
     set_name: Duel Terminal 2
     rarities:
@@ -112,6 +116,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: SBC1-DEI30
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: SOD-FR038
     set_name: Soul of the Duelist
@@ -146,6 +154,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: SBC1-FRI30
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: SOD-IT038
     set_name: Soul of the Duelist
@@ -180,6 +192,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: SBC1-ITI30
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: SOD-PT038
     set_name: Soul of the Duelist
@@ -194,6 +210,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: SBC1-PTI30
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: SOD-JP038
     set_name: Soul of the Duelist
