--- a/data/cards/38699854.yaml
+++ b/data/cards/38699854.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: Retro Pack 2
     rarities:
     - Common
+  - set_number: SBC1-ENI15
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: PGD-034
     set_name: Pharaonic Guardian
     rarities:
@@ -70,6 +74,10 @@ sets:
     set_name: Retro Pack 2
     rarities:
     - Common
+  - set_number: SBC1-DEI15
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DB2-FR231
     set_name: Dark Beginning 2
@@ -83,6 +91,10 @@ sets:
     set_name: Retro Pack 2
     rarities:
     - Common
+  - set_number: SBC1-FRI15
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: DB2-IT231
     set_name: Dark Beginning 2
@@ -94,6 +106,15 @@ sets:
     - Common
   - set_number: RP02-IT069
     set_name: Retro Pack 2
+    rarities:
+    - Common
+  - set_number: SBC1-ITI15
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  pt:
+  - set_number: SBC1-PTI15
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -125,4 +146,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 335
