--- a/data/cards/43797906.yaml
+++ b/data/cards/43797906.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Realm of the Sea Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SBC1-ENI12
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE016
     set_name: Force of the Breaker
@@ -63,6 +67,10 @@ sets:
     - Ultimate Rare
   - set_number: SDRE-DE013
     set_name: Realm of the Sea Emperor Structure Deck
+    rarities:
+    - Common
+  - set_number: SBC1-DEI12
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   fr:
@@ -75,6 +83,10 @@ sets:
     set_name: Realm of the Sea Emperor Structure Deck
     rarities:
     - Common
+  - set_number: SBC1-FRI12
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: FOTB-IT016
     set_name: Force of the Breaker
@@ -83,6 +95,15 @@ sets:
     - Ultimate Rare
   - set_number: SDRE-IT013
     set_name: Realm of the Sea Emperor Structure Deck
+    rarities:
+    - Common
+  - set_number: SBC1-ITI12
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  pt:
+  - set_number: SBC1-PTI12
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -123,4 +144,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 20188
