--- a/data/cards/52971673.yaml
+++ b/data/cards/52971673.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: SBC1-ENH14
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: STOR-DE057
     set_name: Storm of Ragnarok
@@ -61,6 +65,10 @@ sets:
     - Common
   - set_number: LED7-DE054
     set_name: 'Legendary Duelists: Rage of Ra'
+    rarities:
+    - Common
+  - set_number: SBC1-DEH14
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   fr:
@@ -72,6 +80,10 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: SBC1-FRH14
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: STOR-IT057
     set_name: Storm of Ragnarok
@@ -81,9 +93,17 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Common
+  - set_number: SBC1-ITH14
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: LED7-PT054
     set_name: 'Legendary Duelists: Rage of Ra'
+    rarities:
+    - Common
+  - set_number: SBC1-PTH14
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -99,4 +119,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 158400
