--- a/data/cards/53046408.yaml
+++ b/data/cards/53046408.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: Pendulum Domination Structure Deck
     rarities:
     - Common
+  - set_number: SBC1-ENH12
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: LOD-033
     set_name: Legacy of Darkness
     rarities:
@@ -90,6 +94,10 @@ sets:
     set_name: Pendulum Domination Structure Deck
     rarities:
     - Common
+  - set_number: SBC1-DEH12
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: TP6-FR012
     set_name: Tournament Pack 6
@@ -109,6 +117,10 @@ sets:
     - Common
   - set_number: SDPD-FR031
     set_name: Pendulum Domination Structure Deck
+    rarities:
+    - Common
+  - set_number: SBC1-FRH12
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   it:
@@ -132,9 +144,17 @@ sets:
     set_name: Pendulum Domination Structure Deck
     rarities:
     - Common
+  - set_number: SBC1-ITH12
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: SDPD-PT031
     set_name: Pendulum Domination Structure Deck
+    rarities:
+    - Common
+  - set_number: SBC1-PTH12
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
@@ -191,4 +211,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 328
