--- a/data/cards/69123138.yaml
+++ b/data/cards/69123138.yaml
@@ -51,24 +51,45 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SBC1-ENI13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: PP01-DE011
     set_name: Premium Pack (TCG)
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SBC1-DEI13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: PP01-FR011
     set_name: Premium Pack (TCG)
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SBC1-FRI13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: PP01-IT011
     set_name: Premium Pack (TCG)
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SBC1-ITI13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  pt:
+  - set_number: SBC1-PTI13
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: ''
     set_name: Premium Pack 2 (Japanese)
@@ -92,4 +113,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 10003
