--- a/data/cards/70781052.yaml
+++ b/data/cards/70781052.yaml
@@ -122,6 +122,11 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ENI01
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: SDY-004
     set_name: Summoned Skull Sample promotional card
     rarities:
@@ -223,6 +228,11 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-DEI01
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: DDY-F004
     set_name: 'Starter Deck: Yugi'
@@ -276,6 +286,11 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-FRI01
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: MIY-I004
     set_name: 'Starter Deck: Yugi'
@@ -329,6 +344,11 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ITI01
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: DIY-P004
     set_name: 'Starter Deck: Yugi'
@@ -370,6 +390,11 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-PTI01
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: ''
     set_name: Vol.4
