--- a/data/cards/72630549.yaml
+++ b/data/cards/72630549.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ENI03
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: MFC-068
     set_name: Magician's Force
     rarities:
@@ -83,6 +87,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SBC1-DEI03
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR123
     set_name: Dark Revelation Volume 1
@@ -100,6 +108,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SBC1-FRI03
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: DR1-IT123
     set_name: Dark Revelation Volume 1
@@ -117,6 +129,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ITI03
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT123
     set_name: Dark Revelation Volume 1
@@ -126,6 +142,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SBC1-PTI03
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: 303-014
     set_name: Champion of Black Magic
@@ -160,4 +180,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 378
