--- a/data/cards/74153887.yaml
+++ b/data/cards/74153887.yaml
@@ -84,6 +84,10 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: SBC1-ENI24
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: DCR-061
     set_name: Dark Crisis
     rarities:
@@ -109,6 +113,10 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: SBC1-DEI24
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR223
     set_name: Dark Revelation Volume 1
@@ -128,6 +136,10 @@ sets:
     - Common
   - set_number: DCR-FR061
     set_name: Dark Crisis (25th Anniversary Edition)
+    rarities:
+    - Common
+  - set_number: SBC1-FRI24
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   it:
@@ -151,6 +163,10 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: SBC1-ITI24
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT223
     set_name: Dark Revelation Volume 1
@@ -158,6 +174,10 @@ sets:
     - Common
   - set_number: DCR-PT061
     set_name: Dark Crisis (25th Anniversary Edition)
+    rarities:
+    - Common
+  - set_number: SBC1-PTI24
+    set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
   ja:
