--- a/data/cards/78658564.yaml
+++ b/data/cards/78658564.yaml
@@ -93,6 +93,11 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ENI06
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: PSV-094
     set_name: Pharaoh's Servant
     rarities:
@@ -148,6 +153,11 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-DEI06
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: SDP-F094
     set_name: Pharaoh's Servant
@@ -191,6 +201,11 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-FRI06
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: SDF-I094
     set_name: Pharaoh's Servant
@@ -234,6 +249,11 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-ITI06
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: BP02-PT008
     set_name: 'Battle Pack 2: War of the Giants'
@@ -252,6 +272,11 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-PTI06
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: TB-44
     set_name: Thousand Eyes Bible
