--- a/data/cards/84055227.yaml
+++ b/data/cards/84055227.yaml
@@ -47,21 +47,42 @@ sets:
     set_name: The Duelist Genesis
     rarities:
     - Rare
+  - set_number: SBC1-ENI07
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   de:
   - set_number: TDGS-DE084
     set_name: The Duelist Genesis
     rarities:
     - Rare
+  - set_number: SBC1-DEI07
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: TDGS-FR084
     set_name: The Duelist Genesis
     rarities:
     - Rare
+  - set_number: SBC1-FRI07
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: TDGS-IT084
     set_name: The Duelist Genesis
     rarities:
     - Rare
+  - set_number: SBC1-ITI07
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+  pt:
+  - set_number: SBC1-PTI07
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: EXP2-JP015
     set_name: Extra Pack Volume 2
@@ -75,4 +96,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 46040
