--- a/data/rush/16914.yaml
+++ b/data/rush/16914.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw cards equal to [the number of cards sent to the Graveyard to meet the requirement], then you can gain 900 LP.
+    Draw cards equal to [the number of cards sent to the Graveyard to meet the requirement]. Then, you can gain 900 LP.
   de:
   es:
   fr:
