--- a/data/rush/17593.yaml
+++ b/data/rush/17593.yaml
@@ -35,6 +35,7 @@ def: 0
 images:
 - index: 1
   image: Tamabot-RDSD02-JP-C.png
+  illustration: Tamabot-G002-JP-VG-artwork.png
 - index: 2
   image: Tamabot-RDB231-JP-C.png
 sets:
