--- a/data/cards/69750546.yaml
+++ b/data/cards/69750546.yaml
@@ -6,7 +6,7 @@ name:
   es: Disparo Disperso Volcánico
   fr: Cartouche de Chasse Volcanique
   it: Spartitore Vulcanico
-  pt: Disparador Vulcânico
+  pt: Disparo Dispersivo Vulcânico
   ja: ヴォルカニック・バックショット
   ja_romaji: Vorukanikku Bakkushotto
   ko: 볼캐닉 백샷
