--- a/data/rush/16613.yaml
+++ b/data/rush/16613.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 Attack Position Fairy Type monster on your field cannot be destroyed by battle this turn. Your opponent gains LP equal to [that monster's ATK].
+    1 Attack Position Fairy Type monster on your field cannot be destroyed by battle this turn. Then, your opponent gains LP equal to [that monster's ATK].
   de:
   es:
   fr:
